# 336-A2

./: .gitignore  CMakeLists.txt
include/: Callbacks.h  IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  Window.h
lib/: CMakeLists.txt
res/: CMakeLists.txt
res/images/: CMakeLists.txt
res/shaders/: CMakeLists.txt  fShader.frag  vShader.vert
src/: CMakeLists.txt  Callbacks.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
